Drawing multiple lines, but slope not incrementing the value at all. (Breaking for fresh air)

--- a/assn1/Makefile
+++ b/assn1/Makefile
@@ -15,8 +15,8 @@ PROGFILES = \
 
 targets default: $(TARGETS)
 
-$(PROGFILES:.cpp=): assn1.o 
-	$(CC) -o assn1 assn1.o ${LFLAGS}
+$(PROGFILES:.cpp=): assn1.o line.o
+	$(CC) -o assn1 assn1.o line.o ${LFLAGS}
 
 depend :
 	makedepend ${PROGFILES}
