Got line functionality to work. Added Curve class and it works! Next up is adding random color functionality.

--- a/assn1/Makefile
+++ b/assn1/Makefile
@@ -9,14 +9,15 @@ LFLAGS = -lglut -L/usr/lib -L/usr/X11R6/lib -lXi -lXmu -lGL -lGLU -lm
 TARGETS = $(PROGFILES:.cpp=)
 
 PROGFILES = \
-        assn1.cpp \
+  assn1.cpp \
 	line.cpp \
+	curve.cpp \
 	$(NULL)
 
 targets default: $(TARGETS)
 
-$(PROGFILES:.cpp=): assn1.o line.o
-	$(CC) -o assn1 assn1.o line.o ${LFLAGS}
+$(PROGFILES:.cpp=): assn1.o line.o curve.o
+	$(CC) -o assn1 assn1.o line.o curve.o ${LFLAGS}
 
 depend :
 	makedepend ${PROGFILES}
